overflow fixxed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body{
 
     margin: 0 auto;
     font-family: "Poppins",sans-serif;
+    overflow-x: hidden;
+
 }
 .wrapper{
   max-width: 1134px;
